--- a/client/src/pages/Home/index.css
+++ b/client/src/pages/Home/index.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     height: 100vh;
     width: 100%;
     background-image: url(../../assets/images/background.jpg); 
@@ -9,4 +9,73 @@
     box-sizing: border-box;
     position: relative;
 
+} */
+
+/* .btn {
+    border: solid 1px;
+    padding: 5px;
+    border-radius: 10px;
+    text-decoration: none;
 }
+
+.btn:hover {
+    background-color: aquamarine;
+    color: white;
+} */
+
+.btn {
+    padding: 5px 20px;
+    background: orange;
+    position: relative;
+    float:left;
+    width: 30%;
+    text-align: center;
+    border-radius: 10px;
+    text-decoration: none;
+    color: white;
+    position:relative;
+}
+
+.btn:after {
+    content: " ";
+    border: solid transparent;
+    border-width: 0;
+    border-left-color: orange;
+    position: absolute;
+    -webkit-transition: all 1s ease;
+    transition: 2s ease;
+    left: 100%;
+    top: 50%;
+}
+.btn:hover:after {
+    content: " ";
+    display:block;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-color: rgba(0, 0, 0, 0);
+    border-left-color: orange;
+    border-width: 25px;
+    margin-top: -25px;
+    margin-left: -10px;
+}
+
+.start-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.signup {
+    text-decoration: none;
+}
+.signup:hover {
+    color:aquamarine;
+}
+
+/* .not-a-member {
+    
+} */
