--- a/client/src/pages/Login/index.css
+++ b/client/src/pages/Login/index.css
@@ -1,5 +1,5 @@
 .login-title {
-    font-size: 24px;
+    font-size: 32px;
     text-align: center;
 
 }
@@ -16,15 +16,48 @@
 input {
     padding: 3px 10px;
     margin: 5px 0;
+    width: 400px;
+    border-radius: 5px;
+    border: none;
+    height: 45px;
+    font-size: 30px;
+}
+
+.form-input {
+    margin: 10px 0;
 }
 
 
-.signup {
+.signup-new {
     text-decoration: none;
     display: flex;
     justify-content: center;
+    color: orange;
+    font-size: 24px;
     
 }
-.signup:hover {
-    color:rgb(95, 140, 180);
+.signup-new:hover {
+    color:rgb(121, 161, 196);
 }
+
+.submit-btn {
+    margin-top: 10px;
+    padding: 8px 0;
+    font-size: 30px;
+    border-radius: 5px;
+    border: none;
+    background-color: orange;
+    color: white;
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+}
+
+.submit-btn:hover {
+    /* background-color: rgb(127, 190, 190); */
+    box-shadow: inset 0 -55px 0 0 cadetblue; 
+    border-radius: 25px;
+    padding-bottom: 5px;
+}
+
+
