--- a/client/src/pages/Signup/index.css
+++ b/client/src/pages/Signup/index.css
@@ -23,8 +23,14 @@ input {
     text-decoration: none;
     display: flex;
     justify-content: center;
+    color: orange;
+    font-size: 24px;
     
 }
 .login:hover {
-    color:rgb(95, 140, 180);
+    color:rgb(121, 161, 196);
+}
+
+.signup-title {
+    font-size: 42px;
 }
