components for instant messaging

--- a/client/src/components/Header/index.css
+++ b/client/src/components/Header/index.css
@@ -20,14 +20,14 @@
 }
 
 .mySupport {
-    font-size: 2.5em;
+    font-size: 54px;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: var(--black);
     margin-left: 2vw;
    display: inline-block;
   color: white;
   font-family: 'Righteous', serif;
-  font-size: 12em; 
+  font-size: 54px; 
   text-shadow: .03em .03em 0 hsla(230,40%,50%,1);
 
   }
