--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,7 @@ body {
     height: 100vh;
     width: 100vw;
     background-size:cover;
-    background-color: grey;
+    background-color: rgb(236, 194, 240);
     /* background-color: rgb(242, 231, 217);
     background: linear-gradient(to bottom, rgb(219, 203, 183), #491798); */
  
