--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,18 +13,18 @@ body {
     height: 100vh;
     width: 100vw;
     background-size:cover;
-    background-color: rgb(236, 194, 240);
+    /* background-color: rgb(236, 194, 240); */
     /* background-color: rgb(242, 231, 217);
     background: linear-gradient(to bottom, rgb(219, 203, 183), #491798); */
  
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
 
-.container {
+/* .container {
   color: rgb(222, 92, 205);
-}
+} */
 
