--- a/client/src/pages/Home/index.css
+++ b/client/src/pages/Home/index.css
@@ -41,7 +41,7 @@ h1 {
     /* position: absolute;
     top: 70%;
     right: 5%;
-    font-size: 32px;
+    font-size: 32px;f
     transform: translate(-200%, -130%);
     color: rgb(210, 227, 236);
     z-index: 1;
@@ -126,10 +126,12 @@ h1 {
 .signup {
     text-decoration: none;
     padding: 0 15px;
-    color: rgb(127, 190, 190);
+    color: rgb(55, 151, 151);
     transition: all 0.3s ease-in-out;
     -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 .signup:hover {
