updated student lists to only display non admin, and updated backend to add a specific student to a list:

--- a/client/src/components/Header/index.css
+++ b/client/src/components/Header/index.css
@@ -75,6 +75,11 @@
     border-radius: 25px;
     padding-bottom: 5px;
 }
+.logout.active {
+    box-shadow: inset 0 -45px 0 0 cadetblue; 
+    border-radius: 25px;
+    padding-bottom: 5px;
+}
 
 
 .mySupport {
