--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,4 +27,52 @@ body {
 /* .container {
   color: rgb(222, 92, 205);
 } */
+.user_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+ 
+  
+}
+.each_student{
+  border: solid 1px rgb(237, 226, 237);
+  border-radius: 12px;
+  margin: 5px;
+  height: 100px;
+  width: 300px;
+  box-shadow: 2px 2px 2px rgb(237, 226, 237);    
+}
+.each_student:hover {
+  box-shadow: 9px 5px 2px rgb(237, 226, 237);
+}
+.center_only {
+  display: flex;
+  justify-content: center;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+}
+
+.center:hover {
+  border: solid 1px purple;
+  border-radius: 25px;
+  background-color: purple;
+  margin: 5px;
+}
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
