--- a/client/src/components/DataTrackingMeasures/index.css
+++ b/client/src/components/DataTrackingMeasures/index.css
@@ -98,3 +98,32 @@
 
 
 }
+
+.abc_block {
+    border: 1px black solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.abc_checklist {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 5px;
+    
+   
+}
+
+.abc_checklist input {
+    display:  flex;
+    align-items: center;
+    margin-bottom: 25px;
+    
+}
+.underline {
+
+    border-bottom: 1px solid black;
+    border-radius: 0%;
+}
