--- a/client/src/pages/Login/index.css
+++ b/client/src/pages/Login/index.css
@@ -6,25 +6,35 @@
 .login-form {
     display: flex;
     justify-content: center;
+    
 }
 
 .user-input {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
+    margin: auto;
+    align-items: center;
+
 }
 
 input {
     padding: 3px 10px;
     margin: 5px 0;
-    width: 400px;
+    width: 90%;
     border-radius: 5px;
     border: none;
     height: 45px;
     font-size: 30px;
+    
+    
 }
 
 .form-input {
     margin: 10px 0;
+    display: flex;
+    flex-direction: column;
+    
 }
 
 
@@ -42,6 +52,7 @@ input {
 
 .submit-btn {
     margin-top: 10px;
+    width: 80%;
     padding: 8px 0;
     font-size: 30px;
     border-radius: 5px;
@@ -58,6 +69,7 @@ input {
     box-shadow: inset 0 -55px 0 0 cadetblue; 
     border-radius: 25px;
     padding-bottom: 5px;
+    width: 80%;
 }
 
 
