--- a/client/src/components/Header/index.css
+++ b/client/src/components/Header/index.css
@@ -12,6 +12,7 @@
 .nav-section {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
     padding: 10px 0;
    
@@ -58,11 +59,6 @@
 
 .nav-options {
     padding: 0 35px 0 0;
-    justify-content: center;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
     
 }
 .logout {
