--- a/client/src/pages/Login/index.css
+++ b/client/src/pages/Login/index.css
@@ -6,35 +6,25 @@
 .login-form {
     display: flex;
     justify-content: center;
-    
 }
 
 .user-input {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
-    margin: auto;
-    align-items: center;
-
 }
 
 input {
     padding: 3px 10px;
     margin: 5px 0;
-    width: 90%;
+    width: 400px;
     border-radius: 5px;
     border: none;
     height: 45px;
     font-size: 30px;
-    
-    
 }
 
 .form-input {
     margin: 10px 0;
-    display: flex;
-    flex-direction: column;
-    
 }
 
 
@@ -52,7 +42,6 @@ input {
 
 .submit-btn {
     margin-top: 10px;
-    width: 80%;
     padding: 8px 0;
     font-size: 30px;
     border-radius: 5px;
@@ -69,7 +58,6 @@ input {
     box-shadow: inset 0 -55px 0 0 cadetblue; 
     border-radius: 25px;
     padding-bottom: 5px;
-    width: 80%;
 }
 
 
