--- a/client/src/pages/Home/index.css
+++ b/client/src/pages/Home/index.css
@@ -33,12 +33,12 @@
 
 h1 {
     font-size: 68px;
-     display: flex;
-    justify-content: center;
-    align-items: center; 
+    display: flex;
     margin: auto;
     padding: 25px;
+    text-decoration: center;
     /* position: absolute;
+    
     top: 70%;
     right: 5%;
     font-size: 32px;f
