--- a/client/src/pages/TeacherPages/TeacherDataTracking/index.css
+++ b/client/src/pages/TeacherPages/TeacherDataTracking/index.css
@@ -3,24 +3,27 @@
     padding: 10px;
 }
 .modal-dialog{
-
     border: 5px solid #f780ef;
     border-radius: 10px;
-    position: absolute;
-    top: 40%;
-    bottom: 42%;
-    left: 40%;
-    right: 40%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: white;
-    
+    padding:30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
    
 
 }
 .modal-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 10%;
+    flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
    
 }
 .modal-cancel {
