--- a/client/src/components/DataTrackingMeasures/index.css
+++ b/client/src/components/DataTrackingMeasures/index.css
@@ -114,14 +114,15 @@
 }
 .abc_setup input {
    margin: 1%;
-   border: 1px solid black;
+   
 }
 
 .abc_block {
-    border: 1px black solid;
+    border-bottom: 1px black solid;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
     margin-bottom: 10px;
 }
 
@@ -130,8 +131,10 @@
     flex-wrap: wrap;
     justify-content: space-around;
     padding: 5px;
-    
-   
+}
+
+.abc_checklist label {
+    padding: 20px;
 }
 
 .abc_checklist input {
@@ -141,7 +144,6 @@
     
 }
 .underline {
-
     border-bottom: 1px solid black;
     border-radius: 0%;
 }
