--- a/client/src/pages/TeacherPages/Interventions/index.css
+++ b/client/src/pages/TeacherPages/Interventions/index.css
@@ -1,12 +1,24 @@
 .border_solid {
     border: 1px solid black;
-    margin-left: 25px;
     border-radius: 15px;
     padding: 5px 10px 10px 10px;
+    margin-top: 10px;
 }
 
-.idea_section {
-    margin-right: 25px;
+.flex_left {
+    display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-left: 25px;
+
+}
+.flex_right {
+    display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 0 25px;
+  flex: 1
+    
 }
 
 .title {
