--- a/client/src/pages/TeacherPages/Interventions/index.css
+++ b/client/src/pages/TeacherPages/Interventions/index.css
@@ -4,7 +4,9 @@
     padding: 5px 10px 10px 10px;
     margin-top: 10px;
 }
-
+.margin_right{
+    margin-right: 15px;
+}
 .flex_left {
     display: flex;
   flex-wrap: wrap;
