--- a/client/src/pages/TeacherPages/Interventions/index.css
+++ b/client/src/pages/TeacherPages/Interventions/index.css
@@ -23,6 +23,56 @@
     
 }
 
+.ordered_list {
+    list-style-type: none;
+    align-items: center;
+    
+    
+}
+
+.delete {
+    padding: 0 15px;
+    font-size: 18px;
+    text-decoration: none;
+    background-color: white;
+    border: white;
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+}
+
+.delete:hover {
+    box-shadow: inset 0 -65px 0 0 rgb(161, 71, 167); 
+    border-radius: 25px;
+    padding-bottom: 5px;
+}
+
+/* .ideas_center {
+    text-align: center;
+} */
+.list_buttons {
+    padding: 0 15px;
+    font-size: 18px;
+    text-decoration: none;
+    color: purple;
+    background-color: white;
+    border: white;
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+}
+
+.list_buttons:hover {
+    box-shadow: inset 0 -65px 0 0 cadetblue; 
+    border-radius: 25px;
+    padding-bottom: 5px;
+}
+.list_buttons.active {
+    box-shadow: inset 0 -45px 0 0 cadetblue; 
+    border-radius: 25px;
+    padding-bottom: 5px;
+}
+
 .title {
     border: 1px solid black;
     width: 80%;
